added timekeeping functionality

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <h2 class="intervals">
-            Today's Date: <span class="inner" id="todaysDate"></span>
+            Today's Date: <span class="inner" id="todaysDate"></span> <br />
+            <span class="inner" id="currentTime"></span>
         </h2>
         <h3 class="intervals">
             Plus 30 days: <span class="inner" id="plus30"></span>
